--- a/publications.html
+++ b/publications.html
@@ -87,39 +87,41 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
     <br />
     <h3>Journal</h3>
     <ul>
-      <li>AJIBODE, A., BANGASH, A.A., C&#212;GO, F.R., ADAMS, B. and HASSAN, A.E. (2025). <a href="publications/2025/emse_semver.pdf">Towards Semantic Versioning of Open Pre-trained Language Model Releases on Hugging Face</a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a href="publications/2025/emse_semver.bib"><i>BibTeX</i></a>
-      </li>
-      <li>ZHAO, Z., BANGASH, A.A., C&#212;GO, F.R., ADAMS, B. and HASSAN, A.E. (2025). <a
-          href="https://arxiv.org/abs/2407.04065">On the Workflows and Smells of Leaderboard Operations (LBOps): An
-          Exploratory Study of Foundation Model Leaderboards</a>, Transactions on Software Engineering
-        (TSE), IEEE, to appear.&nbsp;<a href="publications/2025/tse_jimmy.bib"><i>BibTeX</i></a>
-      </li>
     <li>SINGH, J., FALLAHZADEH, E., ADAMS, B. and HASSAN, A.E. (2025). <a href="publications/2025/emse_blackbox.pdf">On the
             Impact of Black-box Deployment Strategies for Edge AI on
-            Latency and Model Performance - Empirical Study on ONNX</a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a
-            href="publications/2025/emse_blackbox.bib"><i>BibTeX</i></a>
+            Latency and Model Performance - Empirical Study on ONNX</a>, Empirical Software Engineering, Springer, to
+        appear.&nbsp;<a href="publications/2025/emse_blackbox.bib"><i>BibTeX</i></a>
     </li>
+    <li>AJIBODE, A., BANGASH, A.A., C&#212;GO, F.R., ADAMS, B. and HASSAN, A.E. (2025). <a
+            href="publications/2025/emse_semver.pdf">Towards Semantic Versioning of Open Pre-trained Language Model Releases
+            on Hugging Face</a>, Empirical Software Engineering, 30(3), Springer.&nbsp;<a
+            href="publications/2025/emse_semver.bib"><i>BibTeX</i></a>
+    </li>
+    <li>ZHAO, Z., BANGASH, A.A., C&#212;GO, F.R., ADAMS, B. and HASSAN, A.E. (2025). <a
+            href="https://arxiv.org/abs/2407.04065">On the Workflows and Smells of Leaderboard Operations (LBOps): An
+            Exploratory Study of Foundation Model Leaderboards</a>, Transactions on Software Engineering
+        (TSE), 51(4), p.929-946, IEEE.&nbsp;<a href="publications/2025/tse_jimmy.bib"><i>BibTeX</i></a>
+    </li>    
     <li>EBRAHIMI, A., ADAMS, B., OLIVA, G.A. and HASSAN, A.E. (2025). <a href="https://arxiv.org/abs/2501.00674">UPC
           Sentinel: An Accurate Approach for Detecting Upgradeability Proxy Contracts in Ethereum</a>, Empirical
         Software
-        Engineering, Springer, to appear.&nbsp;<a href="publications/2025/emse_amir_sentinel.bib"><i>BibTeX</i></a>
-      </li>
-      <li>FALLAHZADEH, E., RIGBY, P.C. and ADAMS, B. (2025). <a href="publications/2025/emse_scale.pdf">Contrasting Test
-          Selection, Prioritization, and Batch Testing at Scale</a>, Empirical Software
-        Engineering, Springer, to appear.&nbsp;<a href="publications/2025/emse_scale.bib"><i>BibTeX</i></a></li>
-      <li>KAMATH, D.M., ADAMS, B. and HASSAN, A.E. (2025). <a href="publications/2025/emse_divya_light.pdf">Lightweight
-          Dynamic Build Batching Algorithms for Continuous Integration</a>, Empirical Software
-        Engineering, Springer, to appear.&nbsp;<a href="publications/2025/emse_divya_light.bib"><i>BibTeX</i></a></li>
-      <li>
+        Engineering, 30(3), Springer.&nbsp;<a href="publications/2025/emse_amir_sentinel.bib"><i>BibTeX</i></a>
+    </li>
+    <li>KAMATH, D.M., ADAMS, B. and HASSAN, A.E. (2025). <a href="publications/2025/emse_divya_light.pdf">Lightweight
+            Dynamic Build Batching Algorithms for Continuous Integration</a>, Empirical Software
+        Engineering, 30(2), Springer.&nbsp;<a href="publications/2025/emse_divya_light.bib"><i>BibTeX</i></a></li>
+    <li>FALLAHZADEH, E., RIGBY, P.C. and ADAMS, B. (2025). <a href="publications/2025/emse_scale.pdf">Contrasting Test
+            Selection, Prioritization, and Batch Testing at Scale</a>, Empirical Software
+        Engineering, 30(1), Springer.&nbsp;<a href="publications/2025/emse_scale.bib"><i>BibTeX</i></a></li>
+    <li>
         PATEL, H., BOUCHER, D., FALLAHZADEH, E., HASSAN, A.E. and ADAMS, B. (2025). <a
           href="publications/2025/ieeesw-harsh.pdf">A State-of-the-practice Release-readiness
-          Checklist for Generative AI-based Software Products</a>, IEEE Software, IEEE,
-        to appear.&nbsp;<a href="publications/2025/ieeesw-harsh.bib"><i>BibTeX</i></a>
+          Checklist for Generative AI-based Software Products</a>, IEEE Software, 42(1), p.74-83, IEEE.&nbsp;<a href="publications/2025/ieeesw-harsh.bib"><i>BibTeX</i></a>
       </li>
       <li>
         YASMIN, J., WANG, J., TIAN, Y., and ADAMS, B. (2025). <a href="https://arxiv.org/abs/2406.00180">An
           Empirical Study of Developers' Challenges in Implementing Workflows as Code: A Case Study on Apache
-          Airflow</a>, Journal of Software and Systems (JSS), Elsevier, to appear.&nbsp;<a
+          Airflow</a>, Journal of Software and Systems (JSS), Vol.219, Elsevier.&nbsp;<a
           href="publications/2025/jss_airflow.bib"><i>BibTeX</i></a></li>
     </ul>
     <br />
@@ -137,7 +139,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         Proceedings
         of the 32nd IEEE International Conference on Software Analysis, Evolution and Reengineering, SANER
         (Montr&eacute;al,
-        Canada), to appear. (Acceptance
+        Canada), p.181-192, IEEE. (Acceptance
         ratio: 52/225=23.21%)&nbsp;<a href="publications/2025/saner.bib"><i>BibTeX</i></a>
       </li>
     </ul>
@@ -149,14 +151,14 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
     <br />
     <h3>Journal</h3>
     <ul>
-      <li>
+    <li>
         ZHENG, S., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/ieeesw-shenyu.pdf">On Build
-          Hermeticity in
-          Bazel-based Build
-          Systems</a>, IEEE Software, IEEE,
+            Hermeticity in
+            Bazel-based Build
+            Systems</a>, IEEE Software, IEEE,
         to appear.&nbsp;<a href="publications/2024/ieeesw-shenyu.bib"><i>BibTeX</i></a>
-      </li>          
-      <li>
+    </li>    
+    <li>
         OREAMUNO, E.L., KHAN, R.F., BANGASH, A.A., STINSON, C. and ADAMS, B. (2024). <a
           href="publications/2024/ieeesw-ernesto.pdf">The
           State of Documentation Practices of Third-party Machine Learning Models and Datasets</a>, IEEE
@@ -215,7 +217,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         OLEWICKI, D., HABCHI, S. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2404.10703">An empirical
           study on code
           review activity prediction and its impact in practice</a>, in Proceedings of the ACM
-        on Software Engineering (PACMSE), Issue FSE 2024 (Porto de Galinhas, Brazil), to appear. (Acceptance
+        on Software Engineering (PACMSE), Issue FSE 2024 (Porto de Galinhas, Brazil), article nr. 99, p. 2238 - 2260. (Acceptance
         ratio: 121/483=25.1%)&nbsp;<a href="publications/2024/fse.bib"><i>BibTeX</i></a>
       </li>
       <li>
@@ -1583,7 +1585,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
           href="http://sail.cs.queensu.ca/data/pdfs/EMSE2010_UnderstandingTheImpactOfCodeAndProcessMetricsOnPost-releaseDefects_ACaseStudyOnTheEclipseProject.pdf">Understanding
           the Impact of Code and Process Metrics on Post-release Defects: A Case Study on the Eclipse
           Project</a>, in Proceedings of the 4th International Symposium on Empirical Software Engineering and
-        Measurement, ESEM (Bolzano-Bozen, Italy), Article Nr. 4. (Acceptance ratio: 30/102=29%)&nbsp;<a name="esem10"
+        Measurement, ESEM (Bolzano-Bozen, Italy), article nr. 4. (Acceptance ratio: 30/102=29%)&nbsp;<a name="esem10"
           href="publications/2010/esem10.bib"><i>BibTeX</i></a>
       </li>
       <li>
