--- a/publications.html
+++ b/publications.html
@@ -92,6 +92,13 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             Latency and Model Performance - Empirical Study on ONNX</a>, Empirical Software Engineering, Springer, to
         appear.&nbsp;<a href="publications/2025/emse_blackbox.bib"><i>BibTeX</i></a>
     </li>
+    <li>
+        ZHENG, S., ADAMS, B. and HASSAN, A.E. (2025). <a href="publications/2025/ieeesw-shenyu.pdf">On Build
+            Hermeticity in
+            Bazel-based Build
+            Systems</a>, IEEE Software, IEEE,
+        to appear.&nbsp;<a href="publications/2025/ieeesw-shenyu.bib"><i>BibTeX</i></a>
+    </li>
     <li>AJIBODE, A., BANGASH, A.A., C&#212;GO, F.R., ADAMS, B. and HASSAN, A.E. (2025). <a
             href="publications/2025/emse_semver.pdf">Towards Semantic Versioning of Open Pre-trained Language Model Releases
             on Hugging Face</a>, Empirical Software Engineering, 30(3), Springer.&nbsp;<a
@@ -144,20 +151,23 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
       </li>
     </ul>
     <br /><br /><br /><br />
-  </div>
+    <br />
+    <h3>Workshop</h3>
+    <ul>
+    <li>MACEDO, M., TIAN, Y., and ADAMS, B. (2025). <a href="https://openreview.net/forum?id=9WHJuzjPJf">CodeTransEngine:
+            Ready-to-use Backend for
+            LLM-based Code Translation</a>, in Proceedings of the 3rd Workshop on Deep Learning for Code, DL4C
+        (Singapore).&nbsp;<a href="publications/2025/dl4c.bib"><i>BibTeX</i></a>
+    </li>
+    </ul>
+    <br /><br /><br /><br />
+    </div>
 
   <div class="content">
     <h2><a name="2024"></a>2024</h2>
     <br />
     <h3>Journal</h3>
     <ul>
-    <li>
-        ZHENG, S., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/ieeesw-shenyu.pdf">On Build
-            Hermeticity in
-            Bazel-based Build
-            Systems</a>, IEEE Software, IEEE,
-        to appear.&nbsp;<a href="publications/2024/ieeesw-shenyu.bib"><i>BibTeX</i></a>
-    </li>    
     <li>
         OREAMUNO, E.L., KHAN, R.F., BANGASH, A.A., STINSON, C. and ADAMS, B. (2024). <a
           href="publications/2024/ieeesw-ernesto.pdf">The
@@ -606,7 +616,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         FERREIRA, I., STEWART, K., GERMAN, D. and ADAMS, B. (2019). <a href="publications/2019/SEMotion_2019.pdf">A
           Longitudinal Study on the Maintainers’ Sentiment of a
           Large Scale Open Source Ecosystem</a>, in Proceedings of the 4th International Workshop on Emotional
-        Awareness in Software Engineering, SEmotion (Montr&eacute;al, Canada), p, 17-22.&nbsp;<a
+        Awareness in Software Engineering, SEmotion (Montr&eacute;al, Canada), p. 17-22.&nbsp;<a
           href="publications/2019/semotion.bib"><i>BibTeX</i></a>
       </li>
     </ul>
