--- a/bram.html
+++ b/bram.html
@@ -747,7 +747,7 @@ title: Dr. Bram Adams
         <p>
           <ul>
             <li>Towards Semantic Versioning of Foundation Models, Invited talk at the <a
-                                                                                        href="https://diro.umontreal.ca/accueil/">D&acute;partement
+                                                                                        href="https://diro.umontreal.ca/accueil/">D&eacute;partement
               d'informatique et de recherche op&eacute;rationnelle</a>, Universit&eacute; de Montre&eacute;al, Montreal, June
               26, 2025.</li>
             <li>Release Engineering in the AIware World, Invited talk at the <a
