--- a/bram.html
+++ b/bram.html
@@ -140,7 +140,7 @@ title: Dr. Bram Adams
         <h3>Chair:</h3>
         <p>
         <ul>
-            <li>general chair of the <a href="https://conf.researchr.org/home/msr-2025">21st International Conference on
+            <li>general chair of the <a href="https://conf.researchr.org/home/msr-2025">22nd International Conference on
                     Mining
                     Software Repositories (MSR)</a>, April 28-29, 2025 (Ottawa, ON)</li>
             <li>most influential paper co-chair (together with <a href="https://www.win.tue.nl/~aserebre/">Alexander
