--- a/publications.html
+++ b/publications.html
@@ -87,7 +87,19 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
     <br />
     <h3>Journal</h3>
     <ul>
-    <li>SINGH, J., FALLAHZADEH, E., ADAMS, B. and HASSAN, A.E. (2025). <a href="publications/2025/emse_blackbox.pdf">On the
+        <li>BHATIA, A., KHOMH, F., ADAMS, B. and HASSAN, A.E. (2025). <a href="https://arxiv.org/abs/2311.12019">An Empirical
+                Study of Self-Admitted Technical Debt in Machine Learning Software</a>,
+            Transactions on Software
+            Engineering and Methodology (TOSEM), ACM, to appear.&nbsp;<a
+                href="publications/2025/tosem_aadi.bib"><i>BibTeX</i></a></li>    
+        <li>MACEDO, M., TIAN, Y., C&#212;GO, F.R. and ADAMS, B. (2025). <a href="https://arxiv.org/abs/2403.17214">Output
+                Format
+                Biases in the Evaluation of Large Language Models for Code Translation</a>, Empirical Software Engineering,
+            Springer, to
+            appear.&nbsp;<a href="publications/2025/emse_output.bib"><i>BibTeX</i></a>
+        </li>
+        <li>SINGH, J., FALLAHZADEH, E., ADAMS, B. and HASSAN, A.E. (2025). <a href="publications/2025/emse_blackbox.pdf">On
+                the
             Impact of Black-box Deployment Strategies for Edge AI on
             Latency and Model Performance - Empirical Study on ONNX</a>, Empirical Software Engineering, Springer, to
         appear.&nbsp;<a href="publications/2025/emse_blackbox.bib"><i>BibTeX</i></a>
