Adding Hao's IEEE SW paper.

--- a/publications.html
+++ b/publications.html
@@ -8,6 +8,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
     <div class="subnav">
       <h5>Navigation</h5>
       <ul>
+        <li><a href="#2026">2026</a></li>
         <li><a href="#2025">2025</a></li>
         <li><a href="#2024">2024</a></li>
         <li><a href="#2023">2023</a></li>
@@ -81,6 +82,21 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
 
 
   </div>
+
+  <div class="content">
+    <h2><a name="2026"></a>2026</h2>
+    <br />
+    <h3>Journal</h3>
+    <ul>
+        <li>
+            LI, H., MASRI, H., C&#212;GO, F.R., BANGASH, A.A., ADAMS, B. and HASSAN, A.E. (2026). <a
+                href="https://arxiv.org/abs/2509.12421">Understanding Prompt
+                Management in GitHub Repositories: A Call for Best Practices</a>, IEEE Software, IEEE,
+            to appear.&nbsp;<a href="publications/2026/ieeesw-hicham.bib"><i>BibTeX</i></a>
+        </li>
+        </ul>
+    <br />
+    </div>
 
   <div class="content">
     <h2><a name="2025"></a>2025</h2>
